# cmeel-tinyxml

./: .cirrus.yml  .pre-commit-config.yaml  CMakeLists.txt  pyproject.toml
.github/workflows/: release.yml
