[build-system]
requires = ["cmeel[build]"]
build-backend = "cmeel.build"

[project]
name = "cmeel-tinyxml"
version = "2.6.2.1"
description = "cmeel distribution for TinyXML, an obsolete thing."
requires-python = ">= 3.7"
license = "Zlib"

[project.urls]
homepage = "https://github.com/cmake-wheel/cmeel-tinyxml"

[tool.cmeel]
build-number = 3
py3-none = true
run-tests = false
