[build-system]
build-backend = "cmeel.build"
requires = ["cmeel[build]"]

[project]
description = "cmeel distribution for TinyXML, an obsolete thing."
license = "Zlib"
name = "cmeel-tinyxml"
requires-python = ">= 3.7"
version = "2.6.2.2"

[project.urls]
homepage = "https://github.com/cmake-wheel/cmeel-tinyxml"

[tool.cmeel]
build-number = 1
py3-none = true
run-tests = false

[tool.tomlsort]
all = true
